--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "reactotron-react-js": "^3.3.2",
+    "reactotron-redux": "^3.1.1",
     "redux": "^4.0.4",
     "styled-components": "^4.3.2"
   },
@@ -39,8 +41,10 @@
   "devDependencies": {
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.1",
+    "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.14.3",
     "eslit": "^6.0.0",
     "prettier": "^1.18.2"
